<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fillViewport="false"
    android:scrollbars="none"
    android:background="@drawable/shokoku"
    tools:context="com.example.yueguang89.weather.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|center_horizontal"
                android:layout_weight="0.6">
                <TextView
                    android:text="省份/直辖市"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <Spinner
                    android:id="@+id/provinces"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:text="市/县"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <Spinner
                    android:id="@+id/cities"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select"
                    android:id="@+id/select"
                    android:layout_gravity="right"
                    android:textColor="@color/light_blue"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/city"
                    android:layout_gravity="center"
                    android:id="@+id/city"
                    android:textSize="24sp"/>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2">

            <LinearLayout
                android:id="@+id/linearLayout21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/wind1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/wind"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/windpower1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/windpower"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:id="@+id/temperature1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/light_blue"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/weather1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/wind2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/wind"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/windpower2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/windpower"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout32"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:id="@+id/temperature2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/light_blue"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/weather2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout4">

            <LinearLayout
                android:id="@+id/linearLayout41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_gravity="left"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/wind3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/wind"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/windpower3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/windpower"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout42"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:gravity="right">

                <TextView
                    android:id="@+id/temperature3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/temperature"
                    android:textColor="@color/light_blue"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/weather3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/light_blue"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/date3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in2days"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                android:visibility="gone"
                android:text="北京"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/citysave"
                android:visibility="gone"
                android:text="北京"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input"
                android:id="@+id/input" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output"
                android:id="@+id/output" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:id="@+id/date"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
